--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -10,10 +10,10 @@ jobs:
       with:
           node-version: '22.17.0'
     - name: Run SOOS Scan
-      uses: soos-io/soos-sca-github-action@v2
+      uses: soos-io/soos-sca-github-action@5d0c97061362053846bc31080c4f4634f5c53fbd
       with:
         client_id: ${{ secrets.SOOS_QA_CLIENT_ID }}
         api_key: ${{ secrets.SOOS__QA_API_KEY }}
         project_name: "sca-githubActions-B"
         api_url: 'https://qa-api.soos.io/api/'
-        sca_version: 4.2.1-pre.1
+        #sca_version: 4.2.1-pre.1
