--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -16,4 +16,4 @@ jobs:
         api_key: ${{ secrets.SOOS__QA_API_KEY }}
         project_name: "sca-githubActions-B"
         api_url: 'https://qa-api.soos.io/api/'
-        #sca_version: 4.2.1-pre.1
+        sca_version: 4.2.1-pre.1
