--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -1,14 +1,17 @@
 on: [push]
 
 jobs:
-  soos-sca-analysis:
+  soos:
+    permissions:
+      security-events: write # for uploading code scanning alert info
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     name: SOOS SCA Scan
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
     - uses: actions/setup-node@v4
       with:
           node-version: '20.17.0'
+    - uses: actions/checkout@master
     - name: Run SOOS Scan
       uses: soos-io/soos-sca-github-action@5d0c97061362053846bc31080c4f4634f5c53fbd
       with:
@@ -17,3 +20,18 @@ jobs:
         project_name: "sca-githubActions-B-2"
         api_url: 'https://qa-api.soos.io/api/'
         sca_version: 4.2.1-pre.1
+        export_format: "sarif"
+        export_file_type: "json"
+    - name: Find and rename SARIF file since it is unique
+      run: |
+          file=$(find . -name "*.sarif.json" | head -n 1)
+          if [ -n "$file" ]; then
+            mv "$file" output.sarif.json
+            echo "Renamed $file to output.sarif.json"
+          else
+            echo "No SARIF file found" && exit 1
+          fi
+    - name: Upload SOOS DAST SARIF Report
+      uses: github/codeql-action/upload-sarif@v3
+      with:
+         sarif_file: output.sarif.json
