--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -8,10 +8,7 @@ jobs:
     name: SOOS SCA Scan
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-node@v4
-      with:
-          node-version: '20.17.0'
-    - uses: actions/checkout@main
+    - uses: actions/checkout@master
     - name: Run SOOS Scan
       uses: soos-io/soos-sca-github-action@v2
       with:
