--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -1,10 +1,7 @@
 on: [push]
 
 jobs:
-  soos:
-    permissions:
-      security-events: write # for uploading code scanning alert info
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+  soos-sca-analysis:
     name: SOOS SCA Scan
     runs-on: ubuntu-latest
     steps:
@@ -14,21 +11,7 @@ jobs:
       with:
         client_id: ${{ secrets.SOOS_QA_CLIENT_ID }}
         api_key: ${{ secrets.SOOS__QA_API_KEY }}
-        project_name: "sca-githubActions-B-2"
+        project_name: "sca-githubActions-B"
         api_url: 'https://qa-api.soos.io/api/'
         #sca_version: 4.2.1-pre.1
-        export_format: "sarif"
-        export_file_type: "json"
-    - name: Find and rename SARIF file since it is unique
-      run: |
-          file=$(find . -name "*.sarif.json" | head -n 1)
-          if [ -n "$file" ]; then
-            mv "$file" output.sarif.json
-            echo "Renamed $file to output.sarif.json"
-          else
-            echo "No SARIF file found" && exit 1
-          fi
-    - name: Upload SOOS DAST SARIF Report
-      uses: github/codeql-action/upload-sarif@v3
-      with:
-         sarif_file: output.sarif.json
+
