--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -1,17 +1,35 @@
+name: "SOOS SCA Scan"
+
 on: [push]
 
 jobs:
-  soos-sca-analysis:
-    name: SOOS SCA Scan
+  soos:
+    permissions:
+      security-events: write # for uploading code scanning alert info
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+    name: SOOS SCA Analysis
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Run SOOS Scan
-      uses: soos-io/soos-sca-github-action@v2
-      with:
-        client_id: ${{ secrets.SOOS_QA_CLIENT_ID }}
-        api_key: ${{ secrets.SOOS__QA_API_KEY }}
-        project_name: "sca-githubActions"
-        api_url: 'https://qa-api.soos.io/api/'
-        #sca_version: 4.2.1-pre.1
+      - uses: actions/checkout@v4
+      - name: Run SOOS SCA Analysis
+        uses: soos-io/soos-sca-github-action@v2
+        with:
+          client_id: ${{ secrets.QA_SOOS_CLIENT_ID }}
+          api_key: ${{ secrets.QA_SOOS_API_KEY }}
+          api_url: "https://qa-api.soos.io/api/"
+          #sca_version: 4.2.1-pre.1
+          project_name: "sca-github-actions-B"
+          export_format: "sarif"
+          export_file_type: "json"
+      - uses: actions/upload-artifact@v4
+        with:
+          name: 'reports'
+          path: '*'
+      - name: Rename file 
+        run: mv *.sarif.json results.sarif
+      - name: Upload SOOS DAST SARIF Report
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: results.sarif
+        
 
