--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Run SOOS SCA Analysis
-        uses: soos-io/soos-sca-github-action@v2
+        uses: soos-io/soos-sca-github-action@5d0c97061362053846bc31080c4f4634f5c53fbd
         with:
           client_id: ${{ secrets.QA_SOOS_CLIENT_ID }}
           api_key: ${{ secrets.QA_SOOS_API_KEY }}
