--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -12,11 +12,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Run SOOS SCA Analysis
-        uses: soos-io/soos-sca-github-action@616909ecb474a9d86d6470d6b4a0ac16b33d6f4d
+        uses: soos-io/soos-sca-github-action@v2
         with:
-          client_id: ${{ secrets.QA_SOOS_CLIENT_ID }}
-          api_key: ${{ secrets.QA_SOOS_API_KEY }}
-          api_url: "https://qa-api.soos.io/api/"
+          client_id: ${{ secrets.SOOS_CLIENT_ID }}
+          api_key: ${{ secrets.SOOS_API_KEY }}
+          #api_url: "https://qa-api.soos.io/api/"
           #sca_version: 4.2.1-pre.1
           project_name: "sca-github-actions-B"
           export_format: "sarif"
